correction mobile

--- a/static/css/layouts/blog.css
+++ b/static/css/layouts/blog.css
@@ -164,7 +164,7 @@ h3 {
     }
 
     .header {
-        margin: 10% 1.5em 0;
+        margin: 10% 3em 3em;
         text-align: left;
     }
 
